# zero2production_in_rust

./: .gitignore  Cargo.toml  Dockerfile  configuration.yaml  docker-compose.yml
configuration/: base.yaml  local.yaml  production.yaml
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
